--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
 #  - title: "Portfolio"
 #   url: /portfolio/
     
-  - title: "Research"
+  - title: "Research Projects"
     url: /research/
     
   - title: "Publications"
