--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhanxiong Ma"
-  avatar           : "Photo.jpg"
+  avatar           : "PC.jpg"
   bio              : "Associate Professor at Lanzhou University"
   location         : "Lanzhou, China"
   employer         :  
